--- a/template/index.html
+++ b/template/index.html
@@ -43,7 +43,10 @@
                         <table align="center">
                           <tr>
                           {% for n in range(1,num+1) %}
-                            <td style="padding: 10px;"><a href="/?page={{n}}"><button>{{n}}</button></a></th>
+                            <td style="padding: 5px;">
+                              <a href="/?page={{n}}">
+                              <button>{{n}}</button>
+                              </a></th>
                           {% endfor %}  
                           </tr>
                       </table>
